<resources>
    <string name="app_name">APC Tecnologia</string>
    <string name="botaoAcessar">ACESSAR</string>
    <string name="bem_vindo">Olá, Seja Bem vindo ao \n nosso Aplicativo!</string>
    <string name="bem">Bem Vindo!</string>
    <string name="insira_informacoes">Por favor insira as informações abaixo para continuar</string>
    <string name="text_ajuda">Em que podemos te \n ajudar hoje?</string>
    <string name="text_cliente">Já sou Cliente</string>
    <string name="text_newcliente">Quero ser Cliente</string>
    <string name="text_planos">Consultar Planos</string>
    <string name="text_ajudaZap">Preciso de Ajuda</string>
    <string name="planos">Navege sem limites com Valores que cabem no seu Bolso!</string>
    <string name="planos_voce">Planos para você!</string>
    <string name="planos_consultores">Fale com nossos Consultores!</string>
    <string name="central">Central</string>
    <string name="zap">Whatsapp</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="senha">Senha</string>
    <string name="ajuda">Como podemos ajudar?</string>
    <string name="financeiro">Apc Financeiro</string>
    <string name="vencimento">Vencimento</string>
    <string name="planoAtual">Plano Atual</string>
    <string name="plano">Plano</string>
    <string name="central_cliente">Central do\nCliente</string>
    <string name="segunda_via">Segunda\nVia</string>
    <string name="teste_velocidade">Teste\nVelocidade</string>
    <string name="sobre">Sobre</string>
    <string name="ola">Olá, </string>
    <string name="descricao">imagem</string>
    <string name="maisDados">Meus Dados</string>
    <string name="dados_do_cliente">Dados do Cliente</string>
    <string name="text_nomeCliente">Cliente</string>
    <string name="missao">Nossa missão é fornecer um serviço de \nqualidade sem oscilação e sem intervenções, \n
        tendo você como nosso principal cliente.\n\nFundada em 2010, na cidade de Paulista - PE,\n
        somos uma empresa especializada no serviço \nde telecomunicações. Atuando na área de \n
        internet banda larga e homologados pela \nANATEL.\n\nAplicando tecnologia avançada e inovadoras, \n
        sempre estamos comprometidos em prestar \num serviço de qualidade, com segurança de \n
        dados produtividade e redução de custos \npara a satisfação de nossos clientes, seja \n
        residencial ou corporativo.</string>
    <string name="esqueceu_sua_senha">Esqueceu sua Senha?</string>
    <string name="vamos_ajudar_senha">Não se preocupe! Nós iremos ajudá-lo a recuperar sua senha</string>
    <string name="envie_email">ENVIE SEU EMAIL</string>
    <string name="enviaremos_token">Enviaremos um token para seu e-mail:</string>
    <string name="enviamos_token">Enviamos um token para seu e-mail:</string>
    <string name="nao_tem_conta">NÃO TEM CONTA NO APC? INSCREVA-SE</string>
    <string name="insira_o_token">Insira o Token</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="insira_seu_email_aqui">Insira seu Email Aqui</string>
    <string name="enviar">Enviar</string>
    <string name="verifique_email">Verifique seu Email!</string>
    <string name="email_token">Por favor insira o token enviado para o seu e-mail:</string>
    <string name="text_token">Token</string>
    <string name="sobre_apc">Sobre o Apc (1.0.0)</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="politica_de_privacidade">Política de Privacidade - APC</string>
    <string name="politica">
        \n
        \n
        Última atualização: [27/12/2023]\n
        \n
        \n
        O aplicativo APC - Tecnologia é fornecido por APC Tecnologia Ltda, nosso provedor de internet valoriza sua privacidade. Esta política de privacidade descreve como coletamos, usamos e protegemos suas informações pessoais em conformidade com a Lei Geral de Proteção de Dados (LGPD) e outras leis aplicáveis no Brasil.
        \n
        \n1. Dados Pessoais Coletados
        \n
        \n1.1. Informações de Cadastro: \nPara utilizar nossos serviços, você precisará fornecer informações pessoais, como nome, endereço de e-mail, número de telefone, CPF ou CNPJ, e informações de pagamento, quando aplicável.

        \n1.2. Informações de Uso: \nColetamos informações sobre como você utiliza nosso serviço de internet, incluindo dados de tráfego, histórico de navegação, tempos de acesso e páginas visitadas.

        \n1.3. Informações de Dispositivo: \nPodemos coletar informações sobre o dispositivo que você usa para acessar nossos serviços, como modelo, sistema operacional e identificadores exclusivos do dispositivo.
        \n
        \n
        \n2. Finalidades do Tratamento de Dados
        \n
        \n2.1. Fornecimento de Serviços: \nUtilizamos suas informações para fornecer serviços de internet, incluindo a configuração da conexão, monitoramento de uso, faturamento e resolução de problemas técnicos.

        \n2.2. Melhoria dos Serviços: \nUsamos informações de uso para melhorar a qualidade e a funcionalidade dos nossos serviços.

        \n2.3. Comunicações: \nPodemos entrar em contato com você para fornecer informações importantes sobre sua conta, atualizações de serviços ou ofertas especiais.
        \n
        \n
       \n3. Compartilhamento de Informações
        \n
        \n3.1. Compartilhamento Necessário: \nPodemos compartilhar suas informações com terceiros, como parceiros de rede, apenas quando necessário para fornecer nossos serviços.

        \n3.2. Requisitos Legais: \nPodemos divulgar suas informações em resposta a solicitações legais ou cumprimento de leis aplicáveis.
        \n
        \n
       \n4. Segurança de Dados
        \n
        \nEstamos empenhados em proteger suas informações e implementamos medidas de segurança técnicas e organizacionais para garantir a confidencialidade e a integridade dos dados.
        \n
        \n
        \n5. Seus Direitos de Privacidade
        \n
        \nVocê tem direitos em relação às suas informações pessoais, incluindo o direito de acessar, corrigir, excluir ou revogar seu consentimento. Para exercer esses direitos, entre em contato conosco (81) 3435-6078.
        \n
        \n
        \n6. Alterações nesta Política de Privacidade
        \n
        \nReservamo-nos o direito de atualizar esta política de privacidade periodicamente. A versão mais recente estará sempre disponível em nosso aplicativo.
        \n
        \n
        \n7. Contato
        \n
        \nSe você tiver alguma dúvida ou preocupação sobre esta política de privacidade, entre em contato conosco (81) 3435-6078.
    \n
    \n
    \n</string>
    <string name="termo_de_uso">
        \n
        \nEstes Termos de Uso regem o uso do aplicativo móvel do provedor de internet APC - Tecnologia fornecido por APC Tecnologia Ltda, uma empresa registrada no Brasil sob o CNPJ 51.391.884/0001-93, com sede em Av. Antonio Cabral de Souza, nº 5000, Bairro Nossa Senhora da Conceição,
cidade Paulista, CEP 53.425-430. Ao usar o Aplicativo, você concorda em cumprir estes Termos. Se você não concorda com estes Termos, não deve usar o Aplicativo.
        \n
        \n
        \n1. Uso do Aplicativo
        \n
        \n1.1. Conta do Usuário: \nPara acessar algumas funcionalidades do Aplicativo, você pode ser solicitado a criar uma conta de usuário. Você é responsável por manter a confidencialidade de suas credenciais de acesso.
        \n
        \n1.2. Uso Aceitável: \nVocê concorda em usar o Aplicativo de acordo com todas as leis e regulamentos brasileiros aplicáveis e em conformidade com estes Termos. Você não deve usar o Aplicativo para fins ilegais, prejudiciais ou antiéticos.
        \n
        \n2. Serviços de Internet
        \n
        \n2.1. Qualidade do Serviço: \nForneceremos serviços de internet conforme descrito em seu contrato de serviço. Fazemos esforços razoáveis para garantir a disponibilidade e a qualidade dos serviços, mas não garantimos que o serviço será ininterrupto ou isento de erros.

        \n2.2. Uso Responsável: \nVocê concorda em usar os serviços de internet de forma responsável e em conformidade com qualquer política de uso justo que possa ser aplicável.
        \n
        \n3. Privacidade e Proteção de Dados
        \n
        \n3.1. Privacidade dos Dados: \nNós respeitamos sua privacidade e protegeremos seus dados pessoais de acordo com a legislação brasileira vigente e nossa Política de Privacidade, que você pode consultar no Aplicativo.
        \n
        \n4. Cancelamento de Serviços
        \n
        \n4.1. Cancelamento: \nVocê pode cancelar os serviços de internet de acordo com os termos e condições do seu contrato de serviço. O cancelamento está sujeito a eventuais penalidades ou encargos, conforme acordado no contrato.
        \n
        \n5. Atualizações do Aplicativo
        \n
        \n5.1. Atualizações: \nPodemos disponibilizar atualizações para o Aplicativo para melhorias de segurança e desempenho. Você concorda em manter o Aplicativo atualizado.
        \n
        \n6. Disposições Gerais
        \n
        \n6.1. Modificações dos Termos: \nPodemos modificar estes Termos a qualquer momento. Quaisquer alterações serão comunicadas a você por meio do Aplicativo. O uso contínuo do Aplicativo após as modificações constituirá sua aceitação dos Termos modificados.

        \n6.2. Lei Aplicável e Jurisdição: \nEstes Termos são regidos pelas leis brasileiras. Quaisquer disputas decorrentes destes Termos serão resolvidas no foro da comarca de Paulista - Pernambuco, com renúncia a qualquer outro, por mais privilegiado que seja.
        \n
        \nEstes Termos de Uso constituem o acordo completo entre você e APC Tecnologia Ltda em relação ao uso do Aplicativo. Se você tiver alguma dúvida ou preocupação sobre esses Termos, entre em contato conosco em tecnologia@arteempc.com.br.

        Ao usar o Aplicativo, você concorda com estes Termos e aceita estar legalmente vinculado por eles.
        \n
        \n

        \nData da última atualização: [27/12/2023]
        \n
        \n
    </string>
    <string name="sobreApc">
        Nossa missão é fornecer um serviço de qualidade sem oscilação e sem intervenções, tendo você como nosso principal cliente.
        \nFundada em 2010, na cidade de Paulista - PE, somos uma empresa especializada no serviço de telecomunicações.
        \nAtuando na área de internet banda larga e homologados pela ANATEL.
        \nAplicando tecnologia avançada e inovadoras, sempre estamos comprometidos em prestar um serviço de qualidade, \ncom segurança de dados produtividade e redução de custos para a satisfação de nossos clientes, \nseja residencial ou corporativo.
        \n
        \n
        \n
        \n
        \n
    </string>
    <string name="developers">Versão: 1.0.0
        \n
        \nDevelopers:
        \nValdery Silva
        \nGideone Berg
        \nThamíris Albuquerque</string>
    <string name="logoartepc">logoArtePC</string>
    <string name="preference_file_key">com.example.projeto.activity.PREFERENCE_FILE_KEY</string>
    <string name="pagarFatura">Pagar Fatura</string>
    <string name="fatura_disponivel">Fatura Disponível</string>
    <string name="Aberto">Aberto</string>
    <string-array name="motivos">
        <item>Problemas de velocidade de conexão</item>
        <item>Interrupções frequentes no serviço</item>
        <item>Configuração e instalação do serviço com problemas</item>
        <item>Mau desempenho durante horários de pico</item>
        <item>Dificuldade em cancelar o serviço ou alterar detalhes de cobrança</item>
        <item>Outros</item>
    </string-array>
    <string name="msg_primeiroAcesso1">"Senha cadastrada com sucesso!"</string>
    <string name="msg_primeiroAcesso2">"Senha já cadastrada!"</string>
    <string name="msg_primeiroAcesso3">"Ops! CPF não localizado na base de dados."</string>
    <string name="msg_primeiroAcesso4">"Senha não pode estar em branco!"</string>
</resources>