<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    tools:context=".activity.activitys.SobreApcActivity">

    <!--  transparencia da imagem  android:alpha="0.5"-->


    <TextView
        android:id="@+id/missao"
        android:layout_width="258dp"
        android:layout_height="523dp"
        android:layout_marginTop="80dp"
        android:elevation="2dp"
        android:fontFamily="@font/abel"
        android:text="@string/sobreApc"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/azulAnil"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="812dp"
        android:layout_marginBottom="40dp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/objeto7" />

    <TextView
        android:id="@+id/developers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="190dp"
        android:elevation="2dp"
        android:fontFamily="@font/abel"
        android:text="@string/developers"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/missao" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/logoartepc"
        app:layout_constraintStart_toEndOf="@+id/developers"
        app:layout_constraintTop_toTopOf="@+id/developers"
        app:srcCompat="@drawable/logotipo" />

</androidx.constraintlayout.widget.ConstraintLayout>