<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background"
    tools:context=".activity.TermosDeUsoActivity">

    <!--  transparencia da imagem  android:alpha="0.5"-->
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/objeto8" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="94dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logoartepc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo" />

    <TextView
        android:id="@+id/politica"
        android:layout_width="340dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:elevation="2dp"
        android:fontFamily="@font/abel"
        android:text="@string/termos_de_uso"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="332dp"
        android:layout_height="599dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politica"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/missao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:justificationMode="inter_word"
                android:text="@string/politica"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/azulAnil"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="-180dp"
                tools:layout_editor_absoluteY="348dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>